# cron-quiles

./: .gitignore  CHANGELOG.md  CHECKLIST.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  main.py  pyproject.toml  requirements.txt  shellaquiles_events.ics  shellaquiles_events.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: README.md  tests.yml  update-events.yml
config/: GOOGLE_CALENDAR_SETUP.md  feeds.yaml  list_icals.txt
docs/: AGENTS.md  PROJECT_STRUCTURE.md
examples/: example_event.py
gh-pages/: cronquiles-cdmx.ics  cronquiles-cdmx.json  cronquiles-gdl.ics  cronquiles-gdl.json  cronquiles-mexico.ics  cronquiles-mexico.json  cronquiles-monterrey.ics  cronquiles-monterrey.json  cronquiles-puebla.ics  cronquiles-puebla.json  cronquiles.ics  cronquiles.json
src/shellaquiles/: __init__.py  ics_aggregator.py  main.py
tests/: __init__.py  test_ics_aggregator.py
